Fix overflow item

--- a/style/about.css
+++ b/style/about.css
@@ -319,7 +319,6 @@ button {
 }
 
 .work-time span:last-child {
-  font-size: 1.7rem;
   margin-top: 1rem;
   font-weight: 900;
   margin-bottom: 3rem;
